--- a/styling/daisyui/package.json
+++ b/styling/daisyui/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "react": "^18.3.1",
+    "react-daisyui": "^5.0.3",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
